[package]
name = "extol_pixel_font"
version = "0.2.0"
edition = "2021"
authors = ["Ash <ext0l@catgirl.ai>"]
categories = [ "game-development" ]
description = "Render pixel fonts from PNGs in Bevy."
keywords = [ "gamedev", "bevy" ]
license = "MIT OR Apache-2.0"

[dependencies]
bevy = { version = "0.12", default-features = false, features = ["bevy_asset", "bevy_render", "bevy_sprite"] }

[dev-dependencies]
bevy = { version = "0.12", default-features = false, features = [
  "bevy_asset",
  "bevy_render",
  "bevy_sprite",
  "bevy_core_pipeline",
  "multi-threaded",
  "png",
  "x11",
  "wayland"
] }
bevy_asset_loader = { version = "0.19.1", features = ["2d"] }
